# EasyFace

./: CMakeLists.txt  LICENSE  README.md  README_en.md  build_aarch64-linux-gnu.sh  build_linux.sh  run_demo.sh
cmake/: aarch64-linux-gnu.toolchain.cmake
face_detector/: CMakeLists.txt  README.md
face_detector/example/: face_detector_demo.cpp
face_detector/include/: common.h  face_detector.h  face_detector_impl.h  retinaface.h
face_detector/src/: face_detector.cpp  face_detector_impl.cpp  retinaface.cpp
face_detector/test/: retinaface_test.cpp
face_recognizer/: CMakeLists.txt  README.md
face_recognizer/example/: face_recognizer_demo.cpp
face_recognizer/include/: face_aligner.h  face_recognizer.h  face_recognizer_impl.h  mobilefacenet.h
face_recognizer/src/: face_aligner.cpp  face_recognizer.cpp  face_recognizer_impl.cpp  mobilefacenet.cpp
face_recognizer/test/: face_aligner_test.cpp  face_recognizer_impl_test.cpp  mobilefacenet_test.cpp
face_system/: CMakeLists.txt  face_system_demo.cpp
models/mobilefacenet/: mobilefacenet.param
